--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         - name: Windows
           os: windows-latest
           
-        # - name: macOS
-        #   os: macos-latest
+        - name: macOS
+          os: macos-latest
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
